--- a/oogway/Panel/templates/Post/postList.html
+++ b/oogway/Panel/templates/Post/postList.html
@@ -77,8 +77,8 @@
                             <!-- channel_id -->
                             <a
                               class="nav-link"
-                              href="{% url 'Panel:channel_detail' post.channel_id %}"
-                              >{{ post.channel_id}}</a
+                              href="{% url 'Panel:channel_detail' post.channel.channel_id %}"
+                              >{{ post.channel.channel_id}}</a
                             >
                           </th>
                           <th>
