--- a/oogway/Panel/templates/Symbol/index.html
+++ b/oogway/Panel/templates/Symbol/index.html
@@ -56,7 +56,10 @@
                         <tr>
                           <th scope="col">Id</th>
                           <th scope="col">Name</th>
-                          <th scope="col">Created At</th>
+                          <th scope="col">Size (min price effect)</th>
+                          <th scope="col">Fee Rate</th>
+                          <th scope="col">Currency</th>
+                          <th scope="col">Asset</th>
                           <th scope="col">Actions</th>
                         </tr>
                       </thead>
@@ -72,8 +75,20 @@
                             {{symbol.name}}
                           </th>
                           <th>
-                            <!-- created_at -->
-                            {{symbol.created_at}}
+                            <!-- size -->
+                            {{symbol.size}}
+                          </th>
+                          <th>
+                            <!-- fee_rate -->
+                            {{symbol.fee_rate}}
+                          </th>
+                          <th>
+                            <!-- Currency -->
+                            {{symbol.currency}}
+                          </th>
+                          <th>
+                            <!-- asset -->
+                            {{symbol.asset}}
                           </th>
                           <th>
                             <!-- actions -->
@@ -92,7 +107,10 @@
                         <tr>
                           <th scope="col">Id</th>
                           <th scope="col">Name</th>
-                          <th scope="col">Created At</th>
+                          <th scope="col">Size (min price effect)</th>
+                          <th scope="col">Fee Rate</th>
+                          <th scope="col">Currency</th>
+                          <th scope="col">Asset</th>
                           <th scope="col">Actions</th>
                         </tr>
                       </tfoot>
