--- a/oogway/PostAnalyzer/templates/home.html
+++ b/oogway/PostAnalyzer/templates/home.html
@@ -84,8 +84,8 @@
                             <!-- channel_id -->
                             <a
                               class="nav-link"
-                              href="{% url 'Panel:channel_detail' record.channel_id %}"
-                              >{{ record.channel_id}}</a
+                              href="{% url 'Panel:channel_detail' record.channel.channel_id %}"
+                              >{{ record.channel.channel_id}}</a
                             >
                           </th>
                           <th>
