--- a/oogway/Panel/templates/Home/home.html
+++ b/oogway/Panel/templates/Home/home.html
@@ -80,12 +80,12 @@
                 <!-- small box -->
                 <div class="small-box bg-info">
                   <div class="inner">
-                    <h3>150</h3>
+                    <h3>{{channels|length}}</h3>
 
                     <p>Channels</p>
                   </div>
                   <div class="icon">
-                    <i class="ion ion-bag"></i>
+                    <i class="fas fa-th"></i>
                   </div>
                   <a
                     href="{% url 'Panel:channel_list' %}"
@@ -99,14 +99,15 @@
                 <!-- small box -->
                 <div class="small-box bg-success">
                   <div class="inner">
-                    <h3>53</h3>
+                    <h3>{{predicts|length}}</h3>
 
-                    <p>Opened Positions</p>
+                    <p>Predicts</p>
                   </div>
                   <div class="icon">
-                    <i class="ion ion-stats-bars"></i>
+                    <i class="fas fa-skull-crossbones"></i>
+                    <!-- <i class="ion ion-stats-bars"></i> -->
                   </div>
-                  <a href="#" class="small-box-footer"
+                  <a href="{% url 'Panel:predict' %}" class="small-box-footer"
                     >More info <i class="fas fa-arrow-circle-right"></i
                   ></a>
                 </div>
@@ -116,7 +117,7 @@
                 <!-- small box -->
                 <div class="small-box bg-warning">
                   <div class="inner">
-                    <h3>44</h3>
+                    <h3>-</h3>
 
                     <p>Signal Processed</p>
                   </div>
@@ -133,7 +134,7 @@
                 <!-- small box -->
                 <div class="small-box bg-danger">
                   <div class="inner">
-                    <h3>65</h3>
+                    <h3>-</h3>
 
                     <p>Signal UnProcessed</p>
                   </div>
@@ -183,8 +184,40 @@
                   </div>
                   <!-- /.card-header -->
                   <div class="card-body">
-                    <div class="tab-content p-0">
-                      <div id="btcChart"></div>
+                    <!-- PIE CHART -->
+                    <div class="card card-danger">
+                      <div class="card-header">
+                        <h3 class="card-title">Pie Chart</h3>
+
+                        <div class="card-tools text-white">
+                          <button
+                            type="button"
+                            class="btn btn-tool"
+                            data-card-widget="collapse"
+                          >
+                            <i class="fas fa-minus"></i>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-tool"
+                            data-card-widget="remove"
+                          >
+                            <i class="fas fa-times"></i>
+                          </button>
+                        </div>
+                      </div>
+                      <div class="card-body">
+                        <canvas
+                          id="pieChart"
+                          style="
+                            min-height: 250px;
+                            height: 250px;
+                            max-height: 250px;
+                            max-width: 100%;
+                          "
+                        ></canvas>
+                      </div>
+                      <!-- /.card-body -->
                     </div>
                   </div>
                   <!-- /.card-body -->
@@ -259,6 +292,46 @@
       }
     </script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
+    <!-- ChartJS -->
+    <script>
+      //-------------
+      //- PIE CHART -
+      //-------------
+      // let failed = JSON.parse('{{predictsGroup.FAILED}}')
+      // let success = JSON.parse('{{predictsGroup.SUCCESS}}')
+      // let pending = JSON.parse('{{predictsGroup.PENDING}}')
+      // let canceled = JSON.parse('{{predictsGroup.CANCELED}}') 
+
+      // "{% for x in predictsGroup %}";
+      // ("{% endfor %}");
+      var pieChartCanvas = $("#pieChart").get(0).getContext("2d");
+      var donutData = {
+        labels: ["Failed", "Success", "Pending", "Canceled"],
+        datasets: [
+          {
+            data: [1, 3, 2, 10],
+            backgroundColor: ["#f56954", "#00a65a", "#f39c12", "#f00"],
+          },
+        ],
+      };
+      var pieData = donutData;
+      var pieOptions = {
+        maintainAspectRatio: false,
+        responsive: true,
+        legend: {
+          labels: {
+            fontColor: "#fff",
+          },
+        },
+      };
+      //Create pie or douhnut chart
+      // You can switch between pie and douhnut using the method below.
+      new Chart(pieChartCanvas, {
+        type: "pie",
+        data: pieData,
+        options: pieOptions,
+      });
+    </script>
     <script>
       // Fetch BTC price data from CoinGecko API
       fetch(
