add setting model - add charts

--- a/oogway/Panel/templates/Components/sidebar.html
+++ b/oogway/Panel/templates/Components/sidebar.html
@@ -63,6 +63,12 @@
             <i class="nav-icon fas fa-skull-crossbones"></i>
             <p>Predict</p>
           </a>
+        </li> 
+        <li class="nav-item">
+          <a href="{% url 'Panel:settings' %}" class="nav-link {% is_active 'Panel:settings' %}">
+            <i class="nav-icon fas fa-cog"></i>
+            <p>Settings</p>
+          </a>
         </li>
       </ul>
     </nav>
