--- a/oogway/Panel/templates/Home/home.html
+++ b/oogway/Panel/templates/Home/home.html
@@ -152,11 +152,10 @@
             <!-- Main row -->
             <div class="row">
               <section class="col-lg-7 connectedSortable">
-                <!-- Custom tabs (Charts with tabs)-->
-                <div class="card">
+                <div class="card card-blue">
                   <div class="card-header">
                     <h3 class="card-title">
-                      <i class="fas fa-chart-pie mr-1"></i>
+                      <i class="fas fa-chart-area mr-1"></i>
                       Btc Chart
                     </h3>
                   </div>
@@ -169,62 +168,56 @@
                   <!-- /.card-body -->
                 </div>
                 <!-- /.card -->
-
-                <!-- /.card -->
               </section>
 
               <section class="col-lg-5 connectedSortable">
                 <!-- Custom tabs (Charts with tabs)-->
-                <div class="card">
-                  <div class="card-header">
+                <div class="card card-pink">
+                  <div class="card-header ">
                     <h3 class="card-title">
-                      <i class="fas fa-chart-pie mr-1"></i>
-                      Channnels List
+                      <i class="fas fa-chart-bar mr-1"></i>
+                      Predicts Status
                     </h3>
                   </div>
                   <!-- /.card-header -->
                   <div class="card-body">
-                    <!-- PIE CHART -->
-                    <div class="card card-danger">
-                      <div class="card-header">
-                        <h3 class="card-title">Pie Chart</h3>
+                    <canvas
+                      id="pieChart"
+                      style="
+                        min-height: 250px;
+                        height: 250px;
+                        max-height: 250px;
+                        max-width: 100%;
+                      "
+                    ></canvas>
+                </div>
+              </section>
 
-                        <div class="card-tools text-white">
-                          <button
-                            type="button"
-                            class="btn btn-tool"
-                            data-card-widget="collapse"
-                          >
-                            <i class="fas fa-minus"></i>
-                          </button>
-                          <button
-                            type="button"
-                            class="btn btn-tool"
-                            data-card-widget="remove"
-                          >
-                            <i class="fas fa-times"></i>
-                          </button>
+              <!--   Channels Predicts Status -->
+              <section class="col-12 connectedSortable">
+                <div class="card card-purple">
+                  <div class="card-header">
+                    <h3 class="card-title">
+                      <i class="fas fa-chart-pie mr-1"></i>
+                      Channels Predicts Status
+                    </h3>
+                  </div>
+                  <!-- /.card-header -->
+                    <!-- PIE CHART -->
+                      <div class="card-body">
+                        <div class="chart">
+                          <canvas
+                            id="barChart"
+                            style="
+                              min-height: 250px;
+                              height: 250px;
+                              max-height: 250px;
+                              max-width: 100%;
+                            "
+                          ></canvas>
                         </div>
                       </div>
-                      <div class="card-body">
-                        <canvas
-                          id="pieChart"
-                          style="
-                            min-height: 250px;
-                            height: 250px;
-                            max-height: 250px;
-                            max-width: 100%;
-                          "
-                        ></canvas>
-                      </div>
-                      <!-- /.card-body -->
-                    </div>
-                  </div>
-                  <!-- /.card-body -->
                 </div>
-                <!-- /.card -->
-
-                <!-- /.card -->
               </section>
             </div>
             <!-- /.row (main row) -->
@@ -294,43 +287,172 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <!-- ChartJS -->
     <script>
-      //-------------
-      //- PIE CHART -
-      //-------------
-      // let failed = JSON.parse('{{predictsGroup.FAILED}}')
-      // let success = JSON.parse('{{predictsGroup.SUCCESS}}')
-      // let pending = JSON.parse('{{predictsGroup.PENDING}}')
-      // let canceled = JSON.parse('{{predictsGroup.CANCELED}}') 
-
-      // "{% for x in predictsGroup %}";
-      // ("{% endfor %}");
-      var pieChartCanvas = $("#pieChart").get(0).getContext("2d");
-      var donutData = {
-        labels: ["Failed", "Success", "Pending", "Canceled"],
-        datasets: [
-          {
-            data: [1, 3, 2, 10],
-            backgroundColor: ["#f56954", "#00a65a", "#f39c12", "#f00"],
-          },
-        ],
-      };
-      var pieData = donutData;
-      var pieOptions = {
-        maintainAspectRatio: false,
-        responsive: true,
-        legend: {
-          labels: {
-            fontColor: "#fff",
-          },
-        },
-      };
-      //Create pie or douhnut chart
-      // You can switch between pie and douhnut using the method below.
-      new Chart(pieChartCanvas, {
-        type: "pie",
-        data: pieData,
-        options: pieOptions,
+      const pendingColor = "#f39c12"
+      const successColor = "#00a65a"
+      const failedColor = "#f00"
+      const canceledColor = "#f56954"
+      $(document).ready(function () {
+        loadPredictStatusChart("chart/predict-status/");
+        loadChannelsPredictsStatusChart("chart/channel-predict-status/");
       });
+
+      function loadPredictStatusChart( endpoint) {
+        $.ajax({
+          url: endpoint,
+          type: "GET",
+          dataType: "json",
+          success: (jsonResponse) => {
+            var pieChartCanvas = $("#pieChart").get(0).getContext("2d");
+            var donutData = {
+              labels: jsonResponse.labels,
+              datasets: [
+                {
+                  data: jsonResponse.data,
+                  backgroundColor: [pendingColor, successColor,failedColor, canceledColor],
+                },
+              ],
+            };
+            var pieData = donutData;
+            var pieOptions = {
+              maintainAspectRatio: false,
+              responsive: true,
+              legend: {
+                labels: {
+                  fontColor: "#fff",
+                },
+              },
+            };
+            //Create pie or douhnut chart
+            // You can switch between pie and douhnut using the method below.
+            new Chart(pieChartCanvas, {
+              type: "pie",
+              data: pieData,
+              options: pieOptions,
+            });
+          },
+          error: () =>
+            console.log("Failed to fetch chart data from " + endpoint + "!"),
+        });
+      }
+
+      function loadChannelsPredictsStatusChart(endpoint) {
+        $.ajax({
+          url: endpoint,
+          type: "GET",
+          dataType: "json",
+          success: (res) => {
+            const pending = res.data.map((obj) => obj["PENDING"]);
+            const success = res.data.map((obj) => obj["SUCCESS"]);
+            const failed = res.data.map((obj) => obj["FAILED"]);
+            const canceled = res.data.map((obj) => obj["CANCELED"]);
+            const datasets = [
+              {
+                label: "PENDING",
+                backgroundColor: pendingColor,
+                borderColor: pendingColor,
+                pointRadius: false,
+                pointColor: pendingColor,
+                pointStrokeColor: pendingColor,
+                pointHighlightFill: pendingColor,
+                pointHighlightStroke: pendingColor,
+                data: pending,
+              },
+              {
+                label: "SUCCESS",
+                backgroundColor: successColor,
+                borderColor: successColor,
+                pointRadius: false,
+                pointColor: successColor,
+                pointStrokeColor: successColor,
+                pointHighlightFill: successColor,
+                pointHighlightStroke: successColor,
+                data: success,
+              },
+              {
+                label: "FAILED",
+                backgroundColor: failedColor,
+                borderColor: failedColor,
+                pointRadius: false,
+                pointColor: failedColor,
+                pointStrokeColor: failedColor,
+                pointHighlightFill: failedColor,
+                pointHighlightStroke: failedColor,
+                data: failed,
+              },
+              {
+                label: "CANCELED",
+                backgroundColor: canceledColor,
+                borderColor: canceledColor,
+                pointRadius: false,
+                pointColor: canceledColor,
+                pointStrokeColor: canceledColor,
+                pointHighlightFill: canceledColor,
+                pointHighlightStroke: canceledColor,
+                data: canceled,
+              },
+            ];
+
+            var barChartCanvas = $("#barChart").get(0).getContext("2d");
+            var barChartData = $.extend(
+              true,
+              {},
+              {
+                labels: res.labels,
+                datasets: datasets,
+              }
+            );
+
+            var barChartOptions = {
+              responsive: true,
+              maintainAspectRatio: false,
+              datasetFill: false,
+              legend: {
+                labels: {
+                  fontColor: "#fff",
+                },
+              },
+              scales: {
+                yAxes: [
+                  {
+                    ticks: {
+                      fontColor: "#fff",
+                      // fontSize: 18,
+                      // stepSize: 1,
+                      // beginAtZero: true
+                      // forces step size to be 50 units
+                      stepSize: 1,
+                    },
+                    gridLines: {
+                      zeroLineColor: "#fff",
+                      color: "#fff",
+                    },
+                  },
+                ],
+                xAxes: [
+                  {
+                    ticks: {
+                      fontColor: "#fff",
+                    },
+                    gridLines: {
+                      zeroLineColor: "#fff",
+                      color: "#fff",
+                    },
+                  },
+                ],
+              },
+            };
+
+            new Chart(barChartCanvas, {
+              type: "bar",
+              data: barChartData,
+              options: barChartOptions,
+            });
+          },
+          error: () =>
+            console.log("Failed to fetch chart data from " + endpoint + "!"),
+        });
+      }
+
     </script>
     <script>
       // Fetch BTC price data from CoinGecko API
