--- a/oogway/Panel/templates/Settings/index.html
+++ b/oogway/Panel/templates/Settings/index.html
@@ -45,6 +45,17 @@
                     <div class="card-body">
                       <div class="row">
                         <div class="col-3 form-group">
+                          <label for="max_entry_money">Max Entry Money</label>
+                          <input
+                            type="tel"
+                            name="max_entry_money"
+                            class="form-control"
+                            id="max_entry_money"
+                            value="{{setting.max_entry_money}}"
+                          />
+                          <small class="text-muted" >A number that show how much USDT can use in open a position</small>
+                        </div> 
+                        <div class="col-3 form-group">
                           <label for="size_times_by">Size Multiply</label>
                           <input
                             type="tel"
